# HNEULibrary

backend/: .env.example  .gitignore  Makefile  admin.txt  manage.py  pyproject.toml
backend/locale/uk/LC_MESSAGES/: messages.po
backend/sapogss/: asgi.py  settings.py  urls.py  wsgi.py
backend/shop/: admin.py  models.py  urls.py  views.py
backend/shop/migrations/: 0001_initial.py
backend/src/apps/accounts/: admin.py  urls.py
backend/src/apps/accounts/middlewares/: i18n.py
backend/src/apps/accounts/migrations/: 0001_initial.py  0002_alter_customuser_born_at_discount_and_more.py  0003_alter_customuser_discounts_delete_discount.py  0004_customuser_phone.py  0005_customuser_address.py  0006_alter_customuser_address.py
backend/src/apps/accounts/models/: __init__.py  discounts.py  users.py
backend/src/apps/accounts/serializers/: __init__.py  users.py
backend/src/apps/accounts/services/db/: __init__.py  users.py
backend/src/apps/accounts/views/: users.py
backend/src/apps/docs/: urls.py
backend/src/config/: settings.py  urls.py  wsgi.py
backend/src/utils/db/: __init__.py  models.py  search.py  shortcuts.py
backend/static/css/: custom.css  home.css
backend/templates/: home.html  login.html  reg.html
backend/templates/shop/: delete_product.html  edit_product.html  product_detail.html  shop.html
frontend/: package-lock.json  package.json  tailwind.config.ts  vite.config.mts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/@types/: i18next.d.ts  resources.js  resources.ts
frontend/src/constants/: api.ts  assets.ts  index.ts  navigation.ts
(+59 files in other folders)
