[tool.poetry]
name = "backend"
version = "1.0.0"
description = ""
authors = ["CrazyProger1 <crazyproger1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
pillow = "^11.1.0"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
