[tool.poetry]
name = "backend"
version = "1.0.0"
description = ""
authors = ["CrazyProger1 <crazyproger1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
pillow = "^11.1.0"
uvicorn = "^0.34.0"
python-decouple = "^3.8"
djangorestframework = "^3.15.2"
django-filter = "^25.1"
django-unfold = "^0.49.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
